syntax = "proto3";

option csharp_namespace = "ProductGrpc.Protos";

import "google/protobuf/Timestamp.proto";
import "google/protobuf/Empty.proto";

service ProductProtoService{
	rpc GetProductAsync(GetProductRequest) returns (ProductModel);
	rpc GetAllProductsAsync(GetAllProductsRequest) returns (stream ProductModel);

	rpc AddProductAsync(AddProductRequest) returns (ProductModel);
	rpc UpdateProductAsync(UpdateProductRequest) returns (ProductModel);
	rpc DeleteProductAsync(DeleteProductRequest) returns (DeleteProductResponse);

	rpc InsertBulkProductAsync (stream ProductModel) returns (InsertBulkProductResponse);
	rpc Test(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message GetProductRequest{
	int32 productId = 1;
}

message GetAllProductsRequest{
}

message AddProductRequest{
	ProductModel product = 1;
}

message UpdateProductRequest{
	ProductModel product = 1;
}

message DeleteProductRequest{
	int32 productId = 1;
}

message DeleteProductResponse{
	bool success = 1;
}

message InsertBulkProductResponse{
	bool success = 1;
	int32 insertCount = 2;
}

message ProductModel{
	int32 productId = 1;
	string name = 2;
	string description = 3;
	float price = 4;
	ProductStatusEnum status = 5;
	google.protobuf.Timestamp createdTime = 6;
}

enum ProductStatusEnum{
	INSTOCK = 0;
    LOW = 1;
    NONE = 2;
}